# joker-player

./: .gitignore  .lvimrc  CMakeLists.txt  README.md  deploy-mac.sh
src/: CMakeLists.txt  jokeraccessprovider.cpp  jokeraccessprovider.h  jokeraccessprovider_libusb.cpp  jokeraccessprovider_p.h  jokeraccessprovider_stub.cpp  jokerchannel.cpp  jokerchannel.h  jokerchannelsmodel.cpp  jokerchannelsmodel.h  jokerplayer.cpp  jokerplayer.h  jokerplayerapp.cpp  jokerplayerapp.qrc  jokerplayerapp.rc  jokerprogram.cpp  jokerprogram.h  jokerprogrammodel.cpp  jokerprogrammodel.h  jokersatellitesmodel.cpp  jokersatellitesmodel.h  jokersettingsstorage.cpp  jokersettingsstorage.h  jokerstandardsmodel.cpp  jokerstandardsmodel.h  jokertelevision.cpp  jokertelevision.h
src/qml/: Background.qml  BasicCheckBox.qml  BasicComboBox.qml  BasicLabel.qml  BasicLineEdit.qml  BasicPushButton.qml  BasicRadioButton.qml  BasicToolButton.qml  CamModuleDetector.qml  CamModuleSettingsArea.qml  ChannelScanProgress.qml  ChannelsSelectionMenu.qml  ControlArea.qml  ExpandControl.qml  FrequenciesList.qml  InputSelector.qml  LockControl.qml  MuteControl.qml  ProgramInfo.qml  ProgramsList.qml  ProgramsListArea.qml  ProgramsListHeader.qml  ProgramsListScroll.qml  ProgressSlider.qml  SatelliteChannelsSettings.qml  SatelliteLnbSettings.qml  SatelliteSettingsArea.qml  SatellitesList.qml  SettingsArea.qml  SettingsHeader.qml  SignalStatus.qml  StandardsList.qml  TerrestrialAntennaSettings.qml  TerrestrialChannelsSettings.qml  TerrestrialLnbSettings.qml  TerrestrialSettingsArea.qml  TranspondersList.qml  VideoOutput.qml  VideoOutputArea.qml  jokerplayer.qml
tools/: README.md  deploy-linux.sh  deploy-mac-genicns.sh  deploy-mac-settings.py  deploy-mac.sh  deploy-win.sh  joker_player.icns
